--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>LocomproAqui</title>
+  <title>zoebodega</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -13,17 +13,17 @@
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
 
-  <meta property="og:url"           content="https://www.locomproaqui.com/" />
+  <meta property="og:url"           content="http://www.zoebodega.com/" />
   <meta property="og:type"          content="website" />
-  <meta property="og:title"         content="Locomproaqui" />
-  <meta property="og:description"   content="Locomproaqui una empresa de vendedores acá podrás encontrar productos que podéis vender sin ningún problemas de envió todo se hace contra entrega tú lo que haces es recomendarnos a tus conocidos y pues todo lo que se venda por esa recomendación tu tendrás ganancias por venta " />
+  <meta property="og:title"         content="zoebodega" />
+  <meta property="og:description"   content="zoebodega una empresa de vendedores acá podrás encontrar productos que podéis vender sin ningún problemas de envió todo se hace contra entrega tú lo que haces es recomendarnos a tus conocidos y pues todo lo que se venda por esa recomendación tu tendrás ganancias por venta " />
   <meta property="og:image"         content="https://publihazclick.s3.amazonaws.com/locomprologo.png" />
   <meta property="og:site_name" content="Zapatos" />
   <meta property="og:price:amount" content="90.000" />
   <meta property="og:price:currency" content="COP" />
 
-  <meta name="twitter:title" content=" Locomproaqui">
-  <meta name="twitter:description" content="Locomproaqui una empresa de vendedores acá podrás encontrar productos que podéis vender sin ningún problemas de envió todo se hace contra entrega tú lo que haces es recomendarnos a tus conocidos y pues todo lo que se venda por esa recomendación tu tendrás ganancias por venta">
+  <meta name="twitter:title" content=" zoebodega">
+  <meta name="twitter:description" content="zoebodega una empresa de vendedores acá podrás encontrar productos que podéis vender sin ningún problemas de envió todo se hace contra entrega tú lo que haces es recomendarnos a tus conocidos y pues todo lo que se venda por esa recomendación tu tendrás ganancias por venta">
   <meta name="twitter:image" content="https://publihazclick.s3.amazonaws.com/locomprologo.png">
   <meta name="twitter:site" content="@MIUSUARIO">
   <meta name="twitter:creator" content="@ MIUSUARIO">
