--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>zoebodega</title>
@@ -13,17 +14,19 @@
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
 
-  <meta property="og:url"           content="http://www.zoebodega.com/" />
-  <meta property="og:type"          content="website" />
-  <meta property="og:title"         content="zoebodega" />
-  <meta property="og:description"   content="zoebodega una empresa de vendedores acá podrás encontrar productos que podéis vender sin ningún problemas de envió todo se hace contra entrega tú lo que haces es recomendarnos a tus conocidos y pues todo lo que se venda por esa recomendación tu tendrás ganancias por venta " />
-  <meta property="og:image"         content="https://publihazclick.s3.amazonaws.com/locomprologo.png" />
+  <meta property="og:url" content="http://www.zoebodega.com/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="zoebodega" />
+  <meta property="og:description"
+    content="zoebodega una empresa de vendedores acá podrás encontrar productos que podéis vender sin ningún problemas de envió todo se hace contra entrega tú lo que haces es recomendarnos a tus conocidos y pues todo lo que se venda por esa recomendación tu tendrás ganancias por venta " />
+  <meta property="og:image" content="https://publihazclick.s3.amazonaws.com/locomprologo.png" />
   <meta property="og:site_name" content="Zapatos" />
   <meta property="og:price:amount" content="90.000" />
   <meta property="og:price:currency" content="COP" />
 
   <meta name="twitter:title" content=" zoebodega">
-  <meta name="twitter:description" content="zoebodega una empresa de vendedores acá podrás encontrar productos que podéis vender sin ningún problemas de envió todo se hace contra entrega tú lo que haces es recomendarnos a tus conocidos y pues todo lo que se venda por esa recomendación tu tendrás ganancias por venta">
+  <meta name="twitter:description"
+    content="zoebodega una empresa de vendedores acá podrás encontrar productos que podéis vender sin ningún problemas de envió todo se hace contra entrega tú lo que haces es recomendarnos a tus conocidos y pues todo lo que se venda por esa recomendación tu tendrás ganancias por venta">
   <meta name="twitter:image" content="https://publihazclick.s3.amazonaws.com/locomprologo.png">
   <meta name="twitter:site" content="@MIUSUARIO">
   <meta name="twitter:creator" content="@ MIUSUARIO">
@@ -31,16 +34,26 @@
   <meta name="twitter:label1" content="90.000">
   <meta name="twitter:data2" content="Black">
   <meta name="twitter:label2" content="#1976d2">
-  
+
+  <meta http-equiv="Expires" content="0">
+
+  <meta http-equiv="Last-Modified" content="0">
+
+  <meta http-equiv="Cache-Control" content="no-cache, mustrevalidate">
+
+  <meta http-equiv="Pragma" content="no-cache">
+
 </head>
+
 <body translate="false">
   <app-root>
     <div class="loader">
-        <svg class="circular" viewBox="25 25 50 50">
-            <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
-        </svg>
+      <svg class="circular" viewBox="25 25 50 50">
+        <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10" />
+      </svg>
     </div>
   </app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
+
 </html>
